# roq-cpp-fix-client-template

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore  CMakeLists.txt  README.md  fix_new_order_single.cpp  simple.cpp
conda/: meta.yaml
src/roq/samples/fix_client/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  controller.cpp  controller.hpp  crypto.cpp  crypto.hpp  main.cpp  session.cpp  session.hpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  strategy.cpp  strategy.hpp  test.sh
src/roq/samples/fix_client/flags/: .gitignore  CMakeLists.txt  fix.json  flags.json  service.json  test.json
src/roq/samples/fix_client/service/: CMakeLists.txt  manager.cpp  manager.hpp  response.cpp  response.hpp  session.cpp  session.hpp  shared.cpp  shared.hpp
src/roq/samples/fix_client/session/: CMakeLists.txt  crypto.cpp  crypto.hpp  manager.cpp  manager.hpp
src/roq/simple/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  session.cpp  session.hpp  settings.cpp  settings.hpp  shared.hpp  strategy.cpp  strategy.hpp
src/roq/simple/flags/: .gitignore  CMakeLists.txt  flags.json
src/roq/tools/: simple.cpp  simple.hpp
src/simple/: CMakeLists.txt
src/simple/flags/: .gitignore
test/: .gitignore  CMakeLists.txt  fix_new_order_single.cpp  simple.cpp
